[gd_scene load_steps=3 format=3 uid="uid://ds65tg1ibwfhm"]

[ext_resource type="PackedScene" uid="uid://be1jcdhbbk6da" path="res://scenes/goal_detector.tscn" id="1_iy14r"]
[ext_resource type="Script" path="res://scripts/goal_detectors.gd" id="1_wk0qe"]

[node name="GoalDetectors" type="Node2D"]
script = ExtResource("1_wk0qe")

[node name="GoalDetectorBottom" parent="." instance=ExtResource("1_iy14r")]
position = Vector2(480, 1380)
rotation = -3.14159
team_id = 1

[node name="GoalDetectorTop" parent="." instance=ExtResource("1_iy14r")]
position = Vector2(480, -100)
rotation = -3.14159
team_id = 2
